--- a/app/views/tpl-address-role.html
+++ b/app/views/tpl-address-role.html
@@ -1,51 +1,74 @@
-<fieldset>
-    <legend class="required">
-        <span class="field-name">{{"ROLES_SELECT" |translate}}</span>
-        <strong class="required"> {{"REQUIRED" |translate}}</strong>
-        <strong id="address-role-error" class="error" ng-if="ar.showError(ar.formName.addressRole)">
-                        <span class="label label-danger" ng-messages="ar.formName.addressRole.$error">
+<ng-form name="ar.roleForm">
+    <fieldset>
+        <legend class="required">
+            <span class="field-name">{{"ROLES_SELECT" |translate}}</span>
+            <strong class="required"> {{"REQUIRED" |translate}}</strong>
+            <input id="roleMissing_{{$id}}" name="roleMissing" ng-required="true" ng-show="false"
+                   ng-model="ar.isSelected" required/>
+        <strong id=" address-role-error" class="error" ng-if="ar.showError()">
+                        <span class="label label-danger" ng-messages="ar.roleForm.roleMissing.$error">
                             <span ng-message="required">{{"MSG_ERR_ROLE"|translate}}</span>
                         </span>
-        </strong>
-    </legend>
-    <div class="row">
-        <div class="col-sm-3">
-            <div class="checkbox">
-                <label for="chk-manufacturer_{{$id}}">
-                    <input type="checkbox" name="addressRole" ng-model="ar.roleModel.manufacturer"
-                           id="chk-manufacturer_{{$id}}" ng-change="ar.updateRoleModel()"
-                           ng-required="!ar.someSelected()"> Manufacturer
+            </strong>
+        </legend>
+        <div class="row">
+            <div class="col-sm-3">
+                <div class="checkbox">
+                    <label for="chk-manufacturer_{{$id}}">
+                        <input type="checkbox" ng-model="ar.roleModel.manufacturer" name="addressRole"
+                               ng-change="ar.oneSelected()";
+                               id="chk-manufacturer_{{$id}}"/>
+                        Manufacturer
+                    </label>
+                </div>
+            </div>
+            <div class="col-sm-3">
+                <div class="checkbox">
+                    <label for="chk-mailing{{$id}}">
+                        <input type="checkbox" name="addressRole" ng-model="ar.roleModel.mailing" name="addressRole"
+                               ng-change="ar.oneSelected()" id="chk-mailing{{$id}}"/> Mailing Address
+                    </label>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-3">
+                <div class="checkbox">
+                    <label for="chk-billing_{{$id}}">
+                        <input type="checkbox" name="addressRole" ng-model="ar.roleModel.billing"
+                               ng-change="ar.oneSelected()" id="chk-billing_{{$id}}"
+                        /> Billing Address
+                    </label>
+                </div>
+            </div>
+            <div class="col-sm-3">
+                <div ng-show="!ar.isContact" class="checkbox">
+                    <label for="chk-importer_{{$id}}">
+                        <input type="checkbox" name="addressRole" ng-model="ar.roleModel.importer"
+                               ng-change="ar.oneSelected()" id="chk-importer_{{$id}}"/> Importer Address
+                    </label>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-3">
+                <div class="checkbox">
+                    <label for="chk-rep-primary_{{$id}}">
+                        <input type="checkbox" name="addressRole" ng-model="ar.roleModel.repPrimary"
+                               ng-change="ar.oneSelected()"  id="chk-rep-primary_{{$id}}"/> Primary REP contact
+                    </label>
+                </div>
+            </div>
+            <div class="col-sm-3">
+                <div class="checkbox">
+                    <label for="chk-rep-secondary_{{$id}}">
+                        <input type="checkbox" name="addressRole" ng-model="ar.roleModel.repSecondary"
+                               ng-change="ar.oneSelected()"  id="chk-rep-secondary_{{$id}}"/> Secondary REP contact
+                    </label>
+                </div>
                 </label>
             </div>
         </div>
-        <div class="col-sm-3">
-            <div class="checkbox">
-                <label for="chk-mailing_{{$id}}">
-                    <input type="checkbox" name="addressRole" ng-model="ar.roleModel.mailing"
-                           id="chk-mailing_{{$id}}" tabindex="0"
-                           ng-change="ar.updateRoleModel()" ng-required="!ar.someSelected()"> Mailing Address
-                </label>
-            </div>
         </div>
-    </div>
-    <div class="row">
-        <div class="col-sm-3">
-            <div class="checkbox">
-                <label for="chk-billing_{{$id}}">
-                    <input type="checkbox" name="addressRole" ng-model="ar.roleModel.billing"
-                           id="chk-billing_{{$id}}" tabindex="0"
-                           ng-change="ar.updateRoleModel()" ng-required="!ar.someSelected()"> Billing Address
-                </label>
-            </div>
-        </div>
-        <div class="col-sm-3">
-            <div class="checkbox">
-                <label for="chk-importer_{{$id}}">
-                    <input type="checkbox" name="addressRole" ng-model="ar.roleModel.importer"
-                           id="chk-importer_{{$id}}" tabindex="0"
-                           ng-change="ar.updateRoleModel()" ng-required="!ar.someSelected()"> Importer Address
-                </label>
-            </div>
-        </div>
-    </div>
-</fieldset>
+    </fieldset>
+</ng-form>
