--- a/app/scripts/components/contactList/tpl-contact-list2.html
+++ b/app/scripts/components/contactList/tpl-contact-list2.html
@@ -1,23 +1,34 @@
-<ng-form name="foo">
+<ng-form name="contactListCtrl.contactListForm">
     <section class="panel panel-default">
         <header class="panel-heading">
-            <h3 class="panel-title">Company Contact List</h3>
+            <h2 class="panel-title">{{'CONTACT_INFO'|translate}}</h2>
         </header>
         <div class="panel-body">
             <div class="row">
                 <!-- Place generic expander here-->
+                <input type="checkbox" id="contactValid" name="contactRolesValid" ng-show="false"
+                       ng-model="contactListCtrl.allRolesSelected" required/>
+                <label>
+                    <strong id=" contactNum-role-error" class="error" ng-if="contactListCtrl.showError()">
+                        <span class="label label-danger"
+                              ng-messages="contactListCtrl.contactListForm.contactRolesValid.$error">
+                            <span ng-message="required">{{"MSG_ERR_ALLROLE"|translate}}</span>
+                        </span>
+                    </strong>
+                </label>
                 <cmp-expanding-table list-items="contactListCtrl.contactList"
                                      column-def="contactListCtrl.columnDef" select-record="contactListCtrl.selectRecord"
                                      disable-selection="!contactListCtrl.isDetailValid">
 
                     <cmp-contact-record on-delete="contactListCtrl.deleteContact(contactId)"
-                                        on-update="contactListCtrl.onUpdateContactRecord(rec)"
-                                        is-amend="contactListCtrl.isAmend()" is-role-selected="contactListCtrl.isREPRoleSelected(roleName,id)"
+                                        on-update="contactListCtrl.onUpdateContactRecord(contact)"
+                                        is-amend="contactListCtrl.isAmend()"
+                                        is-role-selected="contactListCtrl.isREPRoleSelected(roleName,id)"
                                         is-detail-valid="contactListCtrl.setValid(state)">
                     </cmp-contact-record>
 
                 </cmp-expanding-table>
-
+            </div>
                 <div class="row mrgn-tp-md mrgn-bttm-lg">
                     <div class="btn-group-sm col-md-12 text-right">
                         <input type="submit" value="Add Contact" class="btn btn-primary"
@@ -27,6 +38,7 @@
                                ng-click="contactListCtrl.newAdrFormShow=false">
                     </div>
                 </div>
-            </div>
+
+        </div>
     </section>
 </ng-form>
