--- a/app/scripts/components/contactRecord/tpl-contact-record.html
+++ b/app/scripts/components/contactRecord/tpl-contact-record.html
@@ -2,12 +2,12 @@
     <ng-form name="contactRec.contactRecForm">
         <div>
             <div>
-                <h2>Contact Record Details</h2>
+                <h3>Contact Details</h3>
 
                 <div class="row">
                     <div class="form-group" ng-show="contactRec.isAmend()">
                         <input class="formControl" id="chk-amend-rec_{{$id}}" type="checkbox"
-                               ng-model="contactRec.contactModel.amendRecord"/>
+                               ng-model="contactRec.contactModel.amendRecord" ng-change="contactRec.setNotEditable()"/>
                         <label class="form-checkbox" for="chk-amend-rec_{{$id}}">
                             {{'AMEND_RECORD'|translate}}
                         </label>
@@ -15,22 +15,21 @@
                 </div>
             </div>
             <div>
-               <!-- <label>ID is  {{contactRec.contactModel.contactId}}</label>-->
                 <cmp-address-role record="contactRec.contactModel"
-                                  is-contact="contactRec.isContact"
+                                  is-contact="contactRec.isContact" is-amend="contactRec.isNotEditable"
                                   on-update="contactRec.onContactRoleUpdate($event.roles)"
                                   show-errors="contactRec.showErrors()" already-selected="contactRec.isOneSelected(roleName)"></cmp-address-role>
 
             </div>
             <div class="row">
-                <cmp-contact-details contact-record="contactRec.contactModel" is-amend="contactRec.isAmend()"
+                <cmp-contact-details contact-record="contactRec.contactModel" is-amend="contactRec.isNotEditable"
                                      on-update="contactRec.onUpdateContactRecord(contact)"
                                      show-errors="contactRec.showErrors()"></cmp-contact-details>
             </div>
             <div class="row">
                 <div class="btn-group-sm col-xs-12 text-right">
-                    <input type="submit" value="Save Contact" class="btn btn-primary"
-                           ng-click="contactRec.updateContactModel2()" ng-disabled="contactRec.setNotEditable()">
+                    <input type="submit" value="Save Contact" class="btn btn-primary" name="saveContact" id="saveContact"
+                           ng-click="contactRec.updateContactModel2()">
                     <input type="submit" value="Delete Contact" class="btn btn-danger" ng-click="contactRec.delete()">
                     <input type="submit" value="Discard Changes" class="btn btn-default" ng-click="contactRec.discardChanges()">
                 </div>
