--- a/app/scripts/components/fileIO/fileSelect.html
+++ b/app/scripts/components/fileIO/fileSelect.html
@@ -8,7 +8,8 @@
                     </label>
 
                     <div class="col-sm-8">
-                        <input id="fileLoad" type="file" accept=".xml, .hcsc" hpfb-file-select="$ctrl.modelCallback(fileContent)"
+                        <input id="fileLoad" type="file" accept=".xml, .hcsc"
+                               hpfb-file-select="$ctrl.modelCallback(fileContent)"
                                root-tag="{{$ctrl.rootElem}}"/>
                     </div>
                 </row>
