--- a/app/scripts/components/applicationInfo/tpl-application-info.html
+++ b/app/scripts/components/applicationInfo/tpl-application-info.html
@@ -1,35 +1,49 @@
-<div class="row">
-    <div class="col-xs-3 form-group">
-        <label for="application-type">{{"APPL_TYPE"| translate}}</label>
-        <select id="application-type"
-                ng-options="type |translate for type in main.applTypes"
-                ng-model="main.company.applicationType" ng-readonly="true"
-                ng-disabled="true"
-                class="form-control full-width"></select>
+<ng-form name="infoCtrl.applInfoForm"
+<div>
+    <div class="row">
+        <div class="col-xs-3 form-group">
+            <label for="application-type_{{$id}}">{{"APPL_STATUS"| translate}}</label>
+            <select id="application-type_{{$id}}"
+                    ng-options="type |translate for type in infoCtrl.applTypes"
+                    ng-model="infoCtrl.record.applicationType"
+                    ng-disabled="true"
+                    class="form-control full-width"></select>
+        </div>
+        <div class="col-xs-3 form-group">
+            <label for="enr-version-text_{{$id}}">{{"ENROL_VERSION"| translate}}</label>
+            <input type="text" class="form-control full-width" id="enr-version-text_{{$id}}" ng-readonly="true"
+                   ng-model="infoCtrl.infoModel.enrolmentVersion"/>
+        </div>
+        <div class="col-xs-3 form-group">
+            <label for="date-saved-text_{{$id}}">{{"DATE_SAVED"| translate}}</label>
+            <input type="text" class="form-control full-width" id="date-saved-text_{{$id}}"
+                   ng-model="infoCtrl.infoModel.dateSaved"
+                   ng-readonly="true"/>
+        </div>
+        <div class="col-xs-3 form-group">
+            <label for="field-id-text_{{$id}}">{{infoCtrl.fieldIdLabel |translate}}
+                <input type="text" class="form-control" id="field-id-text_{{$id}}"
+                       ng-readonly="infoCtrl.isExtern()" maxlength="{{infoCtrl.fieldLength}}" name="fieldId"
+                       ng-minlength="{{infoCtrl.fieldLength}}"
+                       ng-model="infoCtrl.record[infoCtrl.tagName]" ng-required="!infoCtrl.isExtern()"/>
+                <strong id="code-error" class="error">
+                        <span class="label label-danger" ng-if="infoCtrl.applInfoForm.fieldId.$invalid"
+                              ng-messages="infoCtrl.applInfoForm.fieldId.$error">
+                            <span ng-message="required">{{'MSG_ERR_MAND'|translate}}</span>
+                              <span ng-message="minlength"><span translate="{{infoCtrl.errorMsg}}"></span></span>
+                        </span>
+                </strong>
+            </label>
+        </div>
     </div>
-    <div class="col-xs-3 form-group">
-        <label for="enr-version-text">Enrolment Version</label>
-        <input type="text" class="form-control" id="enr-version-text" ng-readonly="true"
-               ng-model="main.company.enrolmentVersion" placeholder="Enrolment Version"/>
-    </div>
-    <div class="col-xs-3 form-group">
-        <label for="date-saved-text">Date Last Saved</label>
-        <input type="text" class="form-control" id="date-saved-text"
-               ng-model="main.company.dateSaved" ng-readonly="true"/>
-    </div>
-    <div class="col-xs-3 form-group">
-        <label for="company-id-text">Company ID</label>
-        <input type="text" class="form-control" id="company-id-text"
-               ng-readonly="main.isExtern()" maxlength="6"
-               ng-model="main.company.companyId"/>
-    </div>
-</div>
-<div class="row">
-    <div class="col-xs-5 form-group">
-        <button class="btn btn-default" ng-click="main.setAmendState()"
-                ng-disabled="main.isIncomplete">
-            Amend Enrolment
-        </button>
-    </div>
-</div>
+  <div class="row">
+      <div class="col-xs-6 form-group">
+          <div>
+              <button class="btn btn-default form-control" name="amendSub" id="amendSub"
+                      ng-click="infoCtrl.setAmendState()" ng-disabled="infoCtrl.setAsIncomplete">
+                  {{'AMEND_ENROL'|translate}}
+              </button>
+          </div>
+      </div>
+  </div>
 </div>
