--- a/app/scripts/components/repContactList/tpl-rep-contact-list.html
+++ b/app/scripts/components/repContactList/tpl-rep-contact-list.html
@@ -5,17 +5,16 @@
         </header>
         <div class="panel-body">
             <div class="row">
-                <!-- Place generic expander here-->
-                <input type="checkbox" id="contactValid" name="contactRolesValid" ng-show="false"
-                       ng-model="contactListCtrl.allRolesSelected" required/>
-                <!--     <label>
-                         <strong id=" contactNum-role-error" class="error" ng-if="contactListCtrl.showError()">
+                <input type="text" id="oneRecord_{{$id}}" name="oneRecord" ng-show="false"
+                       ng-model="contactListCtrl.oneRecord" required/>
+                <label>
+                    <strong id="contactNum-role-error" class="error" ng-if="contactListCtrl.showNoRecordError()">
                              <span class="label label-danger"
-                                   ng-messages="contactListCtrl.contactListForm.contactRolesValid.$error">
-                                 <span ng-message="required">{{"MSG_ERR_ALLROLE"|translate}}</span>
+                                   ng-messages="contactListCtrl.contactListForm.oneRecord.$error">
+                                 <span ng-message="required">{{"MSG_ERR_ONE_REP"|translate}}</span>
                              </span>
                          </strong>
-                     </label>-->
+                </label>
                 <cmp-expanding-table list-items="contactListCtrl.contactList"
                                      column-def="contactListCtrl.columnDef" select-record="contactListCtrl.selectRecord"
                                      disable-selection="!contactListCtrl.isDetailValid">
@@ -31,10 +30,7 @@
             <div class="row mrgn-tp-md mrgn-bttm-lg">
                 <div class="btn-group-sm col-md-12 text-right">
                     <input type="submit" value="Add Contact" class="btn btn-primary"
-                           ng-click="contactListCtrl.addContact()" ng-disabled="!contactListCtrl.isAddContact">
-                    <input type="submit" value="Cancel" class="btn btn-default"
-                           data-ng-show="contactListCtrl.newContactFormShow"
-                           ng-click="contactListCtrl.newAdrFormShow=false">
+                           ng-click="contactListCtrl.addContact()" ng-disabled="contactListCtrl.disableAdd()">
                 </div>
             </div>
 
