--- a/app/scripts/components/rep-contact-record/tpl-rep-contact-record.html
+++ b/app/scripts/components/rep-contact-record/tpl-rep-contact-record.html
@@ -3,24 +3,36 @@
         <div>
             <div class="row">
                 <fieldset>
-                    <legend>{{contactRec.contactModel.repRole |translate}} REP Contact</legend>
-                <cmp-contact-details contact-record="contactRec.contactModel" is-amend="false"
-                                     on-update="contactRec.onUpdateContactRecord(contact)"
-                                     show-errors="contactRec.showErrors()"></cmp-contact-details>
+                    <legend>{{'REP_CONTACT' |translate}}</legend>
+                    <div class="row" ng-if="contactRec.formAmend">
+                        <div class="checkbox">
+                            <label for="chkAmend_{{$id}}">
+                                <input type="checkbox" name="mailing" ng-model="contactRec.contactModel.amend"
+                                       name="chkAmendContact" id="chkAmend_{{$id}}"/>{{"AMEND"|translate}}
+                            </label>
+                        </div>
+                    </div>
+                    <div>
+                        <cmp-contact-details contact-record="contactRec.contactModel"
+                                             is-amend="contactRec.contactModel.amend"
+                                             on-update="contactRec.onUpdateContactRecord(contact)"
+                                             show-errors="contactRec.showErrors()"></cmp-contact-details>
+                    </div>
                 </fieldset>
             </div>
-            <div class="row">
-                <div class="btn-group-sm col-xs-12 text-right">
-                    <input type="submit" value="Save Contact" class="btn btn-primary" name="saveContact"
-                           id="saveContact"
-                           ng-click="contactRec.updateContactModel()">
-                    <input type="submit" value="Delete Contact" class="btn btn-danger" ng-click="contactRec.delete()">
-                    <input type="submit" value="Discard Changes" class="btn btn-default"
-                           ng-click="contactRec.discardChanges()">
-                </div>
+        </div>
+        <div class="row">
+            <div class="btn-group-sm col-xs-12 text-right">
+                <input type="submit" value="{{'SAVE_CONTACT' |translate}}" class="btn btn-primary" name="saveContact"
+                       id="saveContact" ng-click="contactRec.updateContactModel()"/>
+                <input type="submit" value="{{'DELETE_CONTACT' |translate}}" class="btn btn-danger"
+                       ng-click="contactRec.delete()"/>
+                <input type="submit" value="{{'DISCARD_CHANGES'|translate}}" class="btn btn-default"
+                       ng-click="contactRec.discardChanges()"/>
             </div>
         </div>
-    </ng-form>
-    <!--    <pre>contact record model: {{contactRec.contactModel | json : spacing}}</pre>-->
+</div>
+</ng-form>
+<!--    <pre>contact record model: {{contactRec.contactModel | json : spacing}}</pre>-->
 
 </div>
