Bug fixes File naming conventions Help files for activity

--- a/app/scripts/components/addressList/tpl-company-address-list.html
+++ b/app/scripts/components/addressList/tpl-company-address-list.html
@@ -21,7 +21,8 @@
 
                     <cmp-address-record on-delete="addressListCtrl.deleteAddress(addressId)"
                                         on-update="addressListCtrl.onUpdateAddressRecord(rec)"
-                                        is-amend="addressListCtrl.isAmend()"
+                                        is-amend="addressListCtrl.isAmend"
+                                        address-record="$parent.record"
                                         is-role-selected="addressListCtrl.isREPRoleSelected(roleName,id)"
                                         is-detail-valid="addressListCtrl.setValid(state)">
                     </cmp-address-record>
