--- a/app/scripts/components/activityMain/tpl-activity-main.html
+++ b/app/scripts/components/activityMain/tpl-activity-main.html
@@ -3,7 +3,13 @@
              novalidate="novalidate"
              ng-init="main.initUser('EXT')">
         <section class="panel panel-primary mrgn-tp-lg">
-            <header class="panel-heading">
+            <header class="panel-heading clearfix">
+                <div class="btn-group pull-right">
+                    <button class="btn btn-default btn-xs" ng-click="main.openHelp('activityFile')"
+                    aria-haspopup="true">
+                        {{'HELP_FILE_LOAD'|translate}}
+                    </button>
+                </div>
                 <h2 class="panel-title">{{'LOAD_ACTIVITY'|translate}}</h2>
             </header>
             <div class="panel-body">
@@ -18,8 +24,13 @@
         </section>
         <div>
             <section class="panel panel-primary mrgn-tp-lg">
-                <header class="panel-heading">
-                    <h3 class="panel-title">{{'ACTIVE_ENROL' |translate}}</h3>
+                <header class="panel-heading clearfix">
+                    <div class="btn-group pull-right">
+                        <button class="btn btn-default btn-xs" ng-click="main.openHelp('activityMain')" aria-haspopup="true">
+                            {{'HELP_ACTIVITY_MAIN'|translate}}
+                        </button>
+                    </div>
+                    <h2 class="panel-title">{{'ACTIVE_ENROL' |translate}}</h2>
                 </header>
                 <div class="panel-body">
 
@@ -240,10 +251,23 @@
                 </div>
             </section>
             <div>
-                <cmp-rep-contact-list contacts="main.activityRoot.contactRecord" on-update=""
-                                      show-list-errors="main.showErrors()" is-amend="main.formAmend"
-                                      parent-dirty="main.activityEnrolForm.$dirty"
-                                      get-new-contact="main.activityService.createRepContact()"></cmp-rep-contact-list>
+                <section class="panel panel-primary mrgn-tp-lg">
+                    <header class="panel-heading clearfix">
+                        <div class="btn-group pull-right">
+                            <button class="btn btn-default btn-xs" ng-click="main.openHelp('activityRep')" aria-haspopup="true">
+                                {{'HELP_ACTIVITY_REP'|translate}}
+                            </button>
+                        </div>
+                        <h2 class="panel-title">{{'REP_CONTACT_INFO'|translate}}</h2>
+                    </header>
+                    <div class="panel-body">
+                        <cmp-rep-contact-list contacts="main.activityRoot.contactRecord" on-update=""
+                                              show-list-errors="main.showErrors()" is-amend="main.formAmend"
+                                              parent-dirty="main.activityEnrolForm.$dirty"
+                                              get-new-contact="main.activityService.createRepContact()"></cmp-rep-contact-list>
+
+                    </div>
+                </section>
             </div>
             <div class="row">
                 <div class="form-group col-md-3">
