--- a/app/scripts/components/addressDetails/tpl-address-details.html
+++ b/app/scripts/components/addressDetails/tpl-address-details.html
@@ -6,7 +6,7 @@
                     <span class="field-name">{{"STREET" |translate}}</span>
                     <strong class="required"> {{"REQUIRED" |translate}}</strong>
                     <input type="text" class="form-control full-width" maxlength="120" id="street_{{$id}}"
-                           name="street" ng-readonly="adr.isAmend"
+                           name="street" ng-readonly="!adr.isEditable"
                            data-ng-model="adr.addressModel.street" required/>
                     <strong id="street-error" class="error" ng-if="adr.showError(addressForm.street)">
                         <span class="label label-danger" ng-messages="addressForm.street.$error">
@@ -23,7 +23,7 @@
                     <strong class="required"> {{"REQUIRED" |translate}} </strong>
                     <input type="text" id="city_{{$id}}" name="city" data-ng-model="adr.addressModel.city"
                            class="form-control  full-width" maxlength="60"
-                           ng-readonly="adr.isAmend" required/>
+                           ng-readonly="!adr.isEditable" required/>
                     <strong id="city-error" class="error" ng-if="adr.showError(addressForm.city)">
                         <span class="label label-danger" ng-messages="addressForm.city.$error">
                             <span ng-message="required">{{'MSG_ERR_MAND'|translate}}</span>
@@ -34,7 +34,8 @@
             </div>
             <div class="col-md-6">
                 <cmp-country-select form-name="addressForm" selected-country="adr.addressModel.country"
-                                    countries="adr.countries" is-disabled="adr.isAmend"
+                                    countries="adr.countries" is-disabled="!adr.isEditable"
+                                    show-errors="adr.showErrors()"
                                     country-change="adr.onSelectedCountryChange($event.country)"
                 ></cmp-country-select>
             </div>
@@ -49,7 +50,7 @@
                         <select class="form-control full-width" data-ng-model="adr.addressModel.stateList"
                                 id="provinceList_{{$id}}" name="provinceList"
                                 data-ng-options="province |translate for province in adr.provinces"
-                                ng-disabled="adr.isAmend" ng-required="adr.hideProvinceText"></select>
+                                ng-disabled="!adr.isEditable" ng-required="adr.hideProvinceText"></select>
                         <strong id="provinceList-error" class="error"
                                 ng-if="adr.showError(addressForm.provinceList)">
                         <span class="label label-danger" ng-messages="addressForm.provinceList.$error">
@@ -63,7 +64,7 @@
                     <label for="stateText_{{$id}}">{{"PROVSTATE" |translate}}</label>
                     <input type="text" id="stateText_{{$id}}" name="provinceText"
                            data-ng-model="adr.addressModel.stateText" class="form-control full-width" maxlength="40"
-                           size="40" ng-readonly="adr.isAmend"/>
+                           size="40" ng-readonly="!adr.isEditable"/>
                 </div>
             </div>
             <div class="form-group col-md-6" ng-class="{'has-error':addressForm.postal.$invalid}">
@@ -74,7 +75,7 @@
                     <input type="text" id="postal_{{$id}}" name="postal" data-ng-model="adr.addressModel.postalCode"
                            class="form-control full-width" ng-maxlength="7" ng-required="adr.isPostalRequired"
                            ng-change="adr.postalCodeChanged()" ng-model-options="adr.ngModelOptSetting"
-                           maxlength="7" ng-pattern="adr.postalPattern" ng-readonly="adr.isAmend"/>
+                           maxlength="7" ng-pattern="adr.postalPattern" ng-readonly="!adr.isEditable"/>
                     <strong id="postal-error" class="error" ng-if="adr.showError(addressForm.postal)">
                             <span class="label label-danger" ng-messages="addressForm.postal.$error">
                             <span ng-message="required">{{'MSG_ERR_MAND'|translate}} </span>
