Fix Transaction Read Only bug

--- a/app/scripts/components/transactionInfo/tpl-transaction-info.html
+++ b/app/scripts/components/transactionInfo/tpl-transaction-info.html
@@ -200,7 +200,7 @@
                             </div>
                             <div class="row">
                                 <cmp-address-details address-record="transInfoCtrl.transactionModel.activityAddress"
-                                                     show-errors="transInfoCtrl.showError()"></cmp-address-details>
+                                                     is-amend="true"  show-errors="transInfoCtrl.showError()"></cmp-address-details>
                             </div>
                         </fieldset>
                     </div>
@@ -209,7 +209,7 @@
                             <legend>{{'COMPANY_REP_THIS'|translate}}</legend>
                             <div class="row">
                                 <cmp-contact-details contact-record="transInfoCtrl.transactionModel.activityContact"
-                                                     show-errors="transInfoCtrl.showError()"></cmp-contact-details>
+                                                     is-amend="true"  show-errors="transInfoCtrl.showError()"></cmp-contact-details>
                             </div>
                         </fieldset>
                     </div>
