--- a/dossier/app/components/checkbox-list/tpl-checkbox-list.html
+++ b/dossier/app/components/checkbox-list/tpl-checkbox-list.html
@@ -1,7 +1,7 @@
-<fieldset>
+<!--<fieldset>
     <legend class="required">
         <span class="field-name">{{chkl.title}}</span>
-    </legend>
+    </legend>-->
 
     <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 form-group" ng-repeat="item in chkl.currentModel">
 
@@ -11,10 +11,10 @@
         </label>
        </div>
             <div class="col-xs-12 form-group" ng-if="item.value && item.hasOtherDetails">
-                <!--<label for="proper-name">Proper, Common or Non-Proprietary Name</label>-->
-                <input type="text" class="form-control full-width" id="{{chkl.commonName}}-other-text" ng-model="item.otherText" placeholder="Please specify"/>
+                <input type="text" maxlength="40" class="form-control full-width" id="{{chkl.commonName}}-other-text"
+                       ng-model="item.otherText" placeholder="{{'SPECIFY'|translate}}"/>
             </div>
     </div>
     <!--<pre>currentModel: {{chkl.listItems | json : spacing}}</pre>-->
 
-</fieldset>
+<!--</fieldset>-->
