--- a/dossier/app/components/dossier/tpl-dossier.html
+++ b/dossier/app/components/dossier/tpl-dossier.html
@@ -1,82 +1,97 @@
-<form id="dossier-form" name="dossierForm" novalidate>
+<ng-form id="dossier-form" name="dos.dossierForm" novalidate>
 
     <section class="panel  panel-primary mrgn-tp-lg">
         <header class="panel-heading">
-            <h3 class="panel-title">{{'LOAD_DOSSIER'|translate}}</h3>
+            <h2 class="panel-title">{{'LOAD_DOSSIER'|translate}}</h2>
         </header>
         <div class="panel-body">
-            <hpfb-file-select update-model-root=""
-                              root-elem="{{dos.dossierModel}}"/>
+            <hpfb-file-select update-model-root="dos.showContent(fileContent)"
+                              root-elem="{{dos.dossierModel}}"></hpfb-file-select>
         </div>
     </section>
 
     <section class="panel panel-primary mrgn-tp-lg">
         <header class="panel-heading">
-            <h3 class="panel-title">{{'DOSSIER_HDING'|translate}}</h3>
+            <h2 class="panel-title">{{'DOSSIER_HDING'|translate}}</h2>
         </header>
         <div class="panel-body">
 
+            <div>
+                <cmp-application-info record="dos.dossierModel" user-type="dos.formUserType"
+                                      set-type="dos.setApplicationType(type)"
+                                      configure-id-field="dos.configField"
+                                      is-incomplete="dos.isIncomplete"></cmp-application-info>
 
-
-            <div class="row">
-                <div class="col-xs-6 form-group">
-                    <label for="enrolment-type-list">Enrolment Type</label>
-                    <select id="enrolment-type-list" ng-model="dos.dossierModel.applicationType" class="form-control full-width">
-                        <option>New</option>
-                        <option>Approved</option>
-                        <option>Amend</option>
-                    </select>
-                </div>
-
-                <div class="col-xs-4 form-group">
-                    <label for="enr-version-text">Enrolment Version</label>
-                    <input type="text" class="form-control" id="enr-version-text" ng-model="dos.dossierModel.enrolmentVersion" placeholder="Enrolment Version"/>
-
-                </div>
             </div>
             <section class="panel  panel-default">
                 <header class="panel-heading">
-                    <h3 class="panel-title">Drug Product</h3>
+                    <h2 class="panel-title">{{'DRUG_PRODUCT' |translate}}</h2>
                 </header>
                 <div class="panel-body">
 
                     <div class="row">
                         <div class="col-xs-12 form-group">
                             <label for="third-party-signed">
-                                <input type="checkbox" name="thirdPartySigned" ng-model="dos.dossierModel.drugProduct.thirdPartySigned" id="third-party-signed" ng-change="dos.thirdPartySignedChanged()"> The
-                                submission will be signed/filled by a third party on behalf of the manufacturer or sponsor
+                                <input type="checkbox" name="thirdPartySigned"
+                                       ng-model="dos.dossierModel.drugProduct.thirdPartySigned" id="third-party-signed"
+                                       ng-change="dos.thirdPartySignedChanged()">
+                                {{'SIGNED_THIRD'|translate}}
                             </label>
-                            <label ng-if="dos.dossierModel.drugProduct.thirdPartySigned" class="label-info full-width">Please include the Third Party Authorization letter in the REP folder when submitting via
-                                the CESG</label>
+                            <label ng-if="dos.dossierModel.drugProduct.thirdPartySigned" class="label-info full-width">{{'INCLUDE_AUTH'|translate}}</label>
 
                         </div>
                     </div>
 
                     <div class="row">
                         <div class="col-xs-12 form-group">
-                            <label for="related-dossier-id">Related Dossier ID [if applicable]</label>
-                            <input type="text" class="form-control full-width" id="related-dossier-id" ng-model="dos.dossierModel.relatedDossierID" placeholder="Related Dossier ID [if applicable]"/>
+                            <label for="related-dossier-id"></label>
+                            {{'RELATED_DOSSIER'|translate}}
+                            <input type="text" class="form-control full-width" id="related-dossier-id"
+                                   ng-model="dos.dossierModel.relatedDossierID"/>
                         </div>
                     </div>
 
 
                     <div class="row">
-                        <div class="col-xs-12 form-group">
-                            <label for="product-name">Brand or Proprietary or Product Name</label>
-                            <input type="text" class="form-control full-width" id="product-name" ng-model="dos.dossierModel.productName" placeholder="Brand or Proprietary or Product Name"/>
+                        <div class="col-xs-12 form-group" ng-class="{'has-error':dos.dossierForm.productName.$invalid}">
+
+                            <label for="product-name" class="required">
+                                <span class="field-name">{{'PROPNAME' |translate}}</span>
+                                <strong class="required">{{"REQUIRED" |translate}}</strong>
+                                <strong id="productName-error" class="error"
+                                        ng-if="dos.showError(dos.dossierForm.productName.$invalid,dos.dossierForm.productName.$touched)">
+                                    <span class="label label-danger"
+                                          ng-messages="dos.dossierForm.productName.$error">
+                                        <span ng-message="required"><span translate="MSG_ERR_MAND"></span></span>
+                                    </span>
+                                </strong>
+                            </label>
+                            <textarea type="text" class="form-control full-width" id="product-name" rows="2"
+                                      name="productName" required="true"
+                                      maxlength="200" ng-model="dos.dossierModel.productName"></textarea>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-xs-12 form-group" ng-class="{'has-error':dos.dossierForm.properName.$invalid}">
+                            <label for="proper-name" class="required">
+                                <span class="field-name"> {{'PROPER_NAME' |translate}}</span>
+                                <strong class="required">{{"REQUIRED" |translate}}</strong>
+                                <strong id="properName-error" class="error"
+                                        ng-if="dos.showError(dos.dossierForm.properName.$invalid,dos.dossierForm.properName.$touched)">
+                                    <span class="label label-danger"
+                                          ng-messages="dos.dossierForm.properName.$error">
+                                        <span ng-message="required"><span translate="MSG_ERR_MAND"></span></span>
+                                    </span>
+                                </strong>
+                            </label>
+                            <textarea type="text" class="form-control full-width" id="proper-name" name="properName"
+                                     required="true" ng-model="dos.dossierModel.properName" maxlength="256"> </textarea>
                         </div>
                     </div>
 
                     <div class="row">
                         <div class="col-xs-12 form-group">
-                            <label for="proper-name">Proper, Common or Non-Proprietary Name</label>
-                            <input type="text" class="form-control full-width" id="proper-name" ng-model="dos.dossierModel.properName" placeholder="Proper, Common or Non-Proprietary Name"/>
-                        </div>
-                    </div>
-
-                    <div class="row">
-                        <div class="col-xs-12 form-group">
-
                             <cmp-ref-product-list products="dos.dossierModel.canRefProducts"></cmp-ref-product-list>
                         </div>
 
@@ -85,7 +100,8 @@
                     <div class="row">
                         <div class="col-xs-12 form-group">
 
-                            <cmp-drug-use list-items=""></cmp-drug-use>
+                            <cmp-drug-use list-items="" show-list-errors="dos.showErrors()"
+                                          parent-dirty="dos.dossierForm.$dirty"></cmp-drug-use>
                         </div>
 
                     </div>
@@ -94,20 +110,15 @@
                     <div class="row">
                         <div class="col-xs-12 form-group">
                             <cmp-therapeutic-class list-items=""></cmp-therapeutic-class>
-
-                            <!--<cmp-expanding-table title="Therapeutic Classification" list-items="dos.dossierModel.therapeutic.listItems" column-def="dos.dossierModel.therapeutic.columnDef"></cmp-expanding-table>-->
                         </div>
-
                     </div>
-
                     <div class="row">
-                        <div class="col-xs-12 form-group">
-                            <label for="third-party-signed">
-                                <input type="checkbox" name="isScheduleA" ng-model="dos.dossierModel.drugProduct.isScheduleA" id="is-schedule-case" ng-change=""> This is a non-prescription drug to which one
-                                or more Schedule A claims apply
+                        <div class="col-xs-12 checkbox">
+                            <label for="is-schedule-case">
+                                <input type="checkbox" name="isScheduleA"
+                                       ng-model="dos.dossierModel.drugProduct.isScheduleA" id="is-schedule-case">
+                                {{'ISSCHEDA'|translate}}
                             </label>
-
-
                         </div>
                     </div>
 
@@ -122,15 +133,28 @@
             </section>
 
 
-           <cmp-tabs></cmp-tabs>
+            <cmp-tabs></cmp-tabs>
             <!--<cmp-appendix-four></cmp-appendix-four>-->
 
-           <cmp-contact-list ng-if="dos.dossierModel.contactList" contacts="dos.dossierModel.contactList" on-update="dos.onUpdateContactList(newList)"></cmp-contact-list>
+            <!--<cmp-contact-list ng-if="dos.dossierModel.contactList" contacts="dos.dossierModel.contactList" on-update="dos.onUpdateContactList(newList)"></cmp-contact-list>-->
 
+        </div>
 
-       </div>
+    </section>
 
+    <div>
+        <section class="panel panel-primary mrgn-tp-lg">
+            <header class="panel-heading">
+                <h2 class="panel-title">{{'REP_CONTACT_INFO'|translate}}</h2>
+            </header>
+            <div class="panel-body">
+                <cmp-rep-contact-list contacts="dos.dossierModel.contactInfo.contactList"
+                                      parent-dirty="dos.dossierForm.$dirty"
+                                      show-list-errors="dos.showErrors()" is-amend="dos.formAmend">
 
-   </section>
-
-</form>
+                </cmp-rep-contact-list>
+            </div>
+        </section>
+    </div>
+  <!--  <pre>{{dos.dossierModel | json }}</pre>-->
+</ng-form>
