--- a/dossier/app/components/formulations/tpl-non-med-ing-record.html
+++ b/dossier/app/components/formulations/tpl-non-med-ing-record.html
@@ -1,5 +1,13 @@
 <ng-form name="non-med-ing-form">
 
+    <div class="form-group col-md-6">
+        <label for="variant-id" class="required"><span class="field-name">{{'VARIANT_ID'|translate}}</span>
+            <strong class="required">{{"REQUIRED" |translate}}</strong></label>
+        <input type="text" id="variant-id" data-ng-model="ingRecCtrl.ingModel.varId"
+               class="form-control full-width" name="text" ng-required="true" maxlength="60" size="60"/>
+
+    </div>
+
     <div class="form-group col-md-12">
         <label for="ing-name" class="required"><span class="field-name">{{'ING_NAME'|translate}}</span>
             <strong class="required">{{"REQUIRED" |translate}}</strong></label>
@@ -50,7 +58,8 @@
     </div>
 
     <div class="form-group col-md-6" ng-if="ingRecCtrl.ingModel.nanoMaterial === 'Other'">
-        <label for="nanoMaterialOther" class="required"><span class="field-name">{{'NANO_MATERIAL_OTHER'|translate}}</span>
+        <label for="nanoMaterialOther" class="required"><span
+                class="field-name">{{'NANO_MATERIAL_OTHER'|translate}}</span>
             <strong class="required">{{"REQUIRED" |translate}}</strong></label>
         <input type="text" id="nanoMaterialOther" data-ng-model="ingRecCtrl.ingModel.nanoMaterialOther"
                class="form-control full-width" name="text" ng-required="true"/>
@@ -64,7 +73,8 @@
         </div>
         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
             <label class="form-checkbox form-label-inline" for="animalHumanSourced">
-                <input type="checkbox" name="animal-human-sourced" ng-model="ingRecCtrl.ingModel.animalHumanSourced" id="animalHumanSourced">{{'ANIMAL_HUMAN_SOURCED'|translate}}
+                <input type="checkbox" name="animal-human-sourced" ng-model="ingRecCtrl.ingModel.animalHumanSourced"
+                       id="animalHumanSourced">{{'ANIMAL_HUMAN_SOURCED'|translate}}
             </label>
         </div>
 
