--- a/dossier/app/styles/rep.css
+++ b/dossier/app/styles/rep.css
@@ -48,9 +48,18 @@ label > select {
     border-collapse: separate;
     margin-top: 5px;
 }
+/*
+.rep-accordian{
+   color: #295376
+}
+*/
 
 
 /*
 .picker-overlay {
     z-index: 1100 !important;
 }*/
+.rep-expander{
+    cursor:pointer;
+    color:#295376;
+}
